ingress/ingress-httpd.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-httpd
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: httpd
          servicePort: 80
    host: httpd.4labs.example
