ingress/ingress-rewrite.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rewrite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 4labs.example
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service
            name: nginx
            port: 80
      - path: /apache
        pathType: Prefix
        backend:
          service
            name: apache
            port: 80
