ingress/tls-ingress-httpd.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-httpd
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: httpd
          servicePort: 80
    host: httpd.4labs.example
  tls:
  - hosts:
    - httpd.4labs.example
    secretName: certificado-httpd-tls
