ingress/tls-ingress-nginx.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
    host: nginx.4labs.example
  tls:
  - hosts:
    - nginx.4labs.example
    secretName: certificado-nginx-tls
